<resources>
    <string name="app_name">PlatePal</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up_email">Sign up with email</string>
    <string name="google">Continue With Google</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="microsoft">Continue with Microsoft</string>
    <string name="already_account">Already have account? Log in</string>
    <string name="skip" />
    <string name="skip_">Skip</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="calendar">Calendar</string>
    <string name="inspiration">Daily Inspiration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="empty" />
    <string name="instructions">Instructions</string>
    <string name="search_by_area">Search by area</string>
    <string name="search_by_category">Search by category</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="save">Save</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome Back</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="default_web_client_id">909627947675-i52e06alrl085j0s3493jve0jk3b5n2k.apps.googleusercontent.com</string>

</resources>